--- a/src/Components/Topics/Topics.module.scss
+++ b/src/Components/Topics/Topics.module.scss
@@ -1,6 +1,7 @@
 .container {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
+  max-width: 100%;
 
   .arrow {
     cursor: pointer;
@@ -16,10 +17,9 @@
   }
 
   .title {
-    width: 27%;
     height: 23%;
     margin: auto;
-    margin-top: 2.2em;
+    margin-top: 2em;
 
     font-family: var(--gdsc-font-1);
     font-style: normal;
@@ -30,131 +30,68 @@
 
     /* grey 2 */
 
-    color: var(--gdsc-grayish-1-100);
+    color: var(--gdsc-dark-1-100);
   }
 
   .topicbox {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 97vw;
+    margin: auto;
 
-    .boxleft {
-      align-items: flex-start;
-      margin: auto;
-      margin-top: 3rem;
+    .boxes {
+      width: 45%;
+      cursor: pointer;
+      margin-bottom: 1em;
 
-      width: 35rem;
-      height: 518px;
+      flex-basis: 50%;
 
-      .boxes {
-        cursor: pointer;
-        margin-bottom: 1em;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 6px;
-        // gap: 10px;
+      padding: 0.6em;
+      max-width: 35%;
 
-        width: 34.7rem;
-        height: 78px;
+      width: 34.7rem;
+      height: 4.1rem;
+      background: #fff;
 
-        background: #ffffff;
-        /* card drop shadow */
+      /* card drop shadow */
 
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-        border-radius: 10px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+      border-radius: 10px;
 
-        font-family: var(--gdsc-font-1);
-        font-style: normal;
-        font-weight: 400;
-        font-size: 1.4em;
-        line-height: 36px;
-        /* identical to box height */
+      border-radius: 1em;
 
-        display: flex;
-        align-items: center;
-        text-align: center;
+      font-family: var(--gdsc-font-1);
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1.4em;
+      line-height: 36px;
+      /* identical to box height */
 
-        /* grey 1 */
+      /* grey 1 */
 
-        color: var(--gdsc-grayish-2-100);
-        border: none;
-        transition: all 0.4s ease-in-out;
-      }
-
-      .boxes:hover {
-        font-size: 1.6em;
-        transform: scale(1.06);
-        color: var(--gdsc-content-1-100);
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.35);
-      }
+      color: var(--gdsc-grayish-2-100);
+      transition: all 0.4s ease-in-out;
+      border: none;
     }
 
-    .boxright {
-      align-items: flex-start;
-      margin: auto;
-      margin-top: 3rem;
-
-      width: 35rem;
-      height: 518px;
-
-      .boxes {
-        cursor: pointer;
-        margin-bottom: 1em;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 6px;
-        // gap: 10px;
-
-        width: 34.8rem;
-        height: 78px;
-
-        background: #ffffff;
-        /* card drop shadow */
-
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-        border-radius: 10px;
-
-        font-family: var(--gdsc-font-1);
-        font-style: normal;
-        font-weight: 400;
-        font-size: 24px;
-        line-height: 36px;
-        /* identical to box height */
-
-        display: flex;
-        align-items: center;
-        text-align: center;
-
-        /* grey 1 */
-
-        color: var(--gdsc-grayish-2-100);
-        border: none;
-        transition: all 0.4s ease-in-out;
-      }
-
-      .boxes:hover {
-        transform: scale(1.06);
-        color: var(--gdsc-content-1-100);
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.35);
-      }
-    }
-
-    @media screen and (max-width: 1200px) {
-      display: block;
+    .boxes:hover {
+      transform: scale(1.06);
+      color: var(--gdsc-content-1-100);
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.35);
     }
   }
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 900px) {
   .container {
     width: 100%;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     height: auto;
 
     .arrow {
@@ -162,7 +99,7 @@
       width: 22px;
       height: 0px;
       left: 9%;
-      top: 6.4rem;
+      top: 8.9rem;
 
       .arrowicon {
         font-size: 2rem;
@@ -172,35 +109,23 @@
     .title {
       margin: auto;
       margin-top: 7rem;
-      width: 100%;
-      height: 6%;
 
       font-weight: 400;
-      font-size: 2.5rem;
+      font-size: 2.2rem;
       line-height: 39px;
       text-align: center;
     }
 
     .topicbox {
-      .boxleft {
-        width: 100%;
+      margin: auto;
+      margin-top: 3.8rem;
+      overflow-y: auto;
 
-        .boxes {
-          width: 79%;
-          margin: auto;
-          margin-bottom: 1.3rem;
-        }
-      }
+      height: auto;
 
-      .boxright {
-        width: 100%;
-        margin-top: 0;
-
-        .boxes {
-          width: 79%;
-          margin: auto;
-          margin-bottom: 1.3rem;
-        }
+      .boxes {
+        max-width: 80%;
+        flex-basis: 100%;
       }
     }
   }
